force-app/main/default/objects/CloudSignWebHookHistory__c/CloudSignWebHookHistory__c.object-meta.xml
<CustomObject>
    <label>クラウドサインWebHook履歴</label>
    <nameField>
        <label>クラウドサインWebHook履歴名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>