force-app/main/default/objects/CloudSignWebHookHistory__c/fields/Json__c.field-meta.xml
<CustomField>
    <fullName>Json__c</fullName>
    <label>JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>