force-app/main/default/objects/CloudSignWebHookHistory__c/listViews/GM_CloudSignWebHookHistory.listView-meta.xml
<ListView>
    <fullName>GM_CloudSignWebHookHistory</fullName>
    <filterScope>Queue</filterScope>
    <label>GM</label>
    <queue>GM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>